force-app/zurich-base/main/default/objects/Activity/fields/SalesLossReasonDateTime__c.field-meta.xml
<CustomField>
    <fullName>SalesLossReasonDateTime__c</fullName>
    <description>Especificar fecha y hora de contacto con cliente en los casos de Motivo Perdida: Interesado más adelante e Interesado, pero prefiero que lo gestione mi agente. Uso en App Ventas</description>
    <label>Sales Loss Reason Date/Time</label>
    <type>DateTime</type>
</CustomField>