force-app/zurich-base/main/default/objects/Activity/fields/SegmentMediatorCase__c.field-meta.xml
<CustomField>
    <fullName>SegmentMediatorCase__c</fullName>
    <label>Segment Mediator Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>