force-app/zurich-base/main/default/objects/Activity/fields/SegmentoMediadorCaso__c.field-meta.xml
<CustomField>
    <fullName>SegmentoMediadorCaso__c</fullName>
    <label>Segmento Mediador Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>