force-app/zurich-base/main/default/objects/Activity/fields/SoyManager__c.field-meta.xml
<CustomField>
    <fullName>SoyManager__c</fullName>
    <description>(OCS). Indica si el usuario es o no manager del propietario de la tarea en algún escalón de la jerarquía (máximo 4 niveles)</description>
    <formula>OR($User.Id = Owner:User.ManagerId,
$User.Id = Owner:User.Manager.ManagerId,
$User.Id = Owner:User.Manager.Manager.ManagerId,
$User.Id = Owner:User.Manager.Manager.Manager.ManagerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Manager</label>
    <type>Checkbox</type>
</CustomField>