force-app/zurich-base/main/default/objects/Activity/fields/SubjectLink__c.field-meta.xml
<CustomField>
    <fullName>SubjectLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id, Subject)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asunto</label>
    <type>Text</type>
</CustomField>