force-app/zurich-base/main/default/objects/Activity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Campo creado para dar más información al equipo de reporting, es dependiente del campo Type</description>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Contact Request</fullName>
            </value>
            <value>
                <fullName>Contractual recording</fullName>
            </value>
            <value>
                <fullName>Documentation uploaded by customer</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>External service transfer</fullName>
            </value>
            <value>
                <fullName>Note Info</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Request for documentation by EMAIL</fullName>
            </value>
            <value>
                <fullName>Request for documentation by SMS</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Scaled Other Areas</fullName>
            </value>
            <value>
                <fullName>Scaled Supervisor</fullName>
            </value>
            <value>
                <fullName>Scaled Technical Direction</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Request for appraisal</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Administrative Tasks</fullName>
            </value>
            <value>
                <fullName>Campaign Actions (Massive)</fullName>
            </value>
            <value>
                <fullName>Incidences Record MiZurich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>